--- a/frontend/admin/admin-login.html
+++ b/frontend/admin/admin-login.html
@@ -48,11 +48,11 @@
           ></span>
           <span
             class="text-[8px] font-black uppercase tracking-widest opacity-50"
-            >Atlas Node</span
+            >Active</span
           >
         </div>
         <h1 class="text-3xl font-black tracking-tighter uppercase">
-          Mishra <span class="text-orange-500">Admin</span>
+          Admin <span class="text-orange-500">Portal</span>
         </h1>
         <p
           class="text-blue-300 text-[10px] font-bold uppercase tracking-[0.3em] mt-2"
