--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       Mishra Industries Limited | India's Best Online Electrical Store
     </title>
@@ -16,12 +16,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    
     <style>
       
     </style>
   </head>
   <body class="bg-gray-50 font-sans">
-<body class="bg-gray-50">
 <header class="header">
   <!-- Left: Logo + Name -->
   <div class="flex items-center space-x-4 cursor-pointer shrink-0" onclick="location.href = 'index.html'">
@@ -262,7 +262,7 @@
           <div class="flex items-start gap-6 p-10 bg-white border-2 border-green-100 rounded-[2rem] hover:shadow-xl transition-all hover:-translate-y-1">
             <div class="shrink-0">
               <div class="w-16 h-16 bg-blue-50 rounded-full flex items-center justify-center border-2 border-blue-900">
-                  <i class="fas fa-eye text-blue-900 text-2xl"></i>
+                  <i class="fas fa-eye text-blue-900 text-2xl animate-pulse"></i>
               </div>
             </div>
             <div>
@@ -275,7 +275,7 @@
           <div class="flex items-start gap-6 p-10 bg-white border-2 border-green-100 rounded-[2rem] hover:shadow-xl transition-all hover:-translate-y-1">
             <div class="shrink-0">
                <div class="w-16 h-16 bg-blue-50 rounded-full flex items-center justify-center border-2 border-blue-400">
-                  <i class="fas fa-globe-asia text-blue-400 text-2xl animate-pulse"></i>
+                  <i class="fas fa-globe-asia text-blue-900 text-2xl animate-pulse"></i>
                </div>
             </div>
             <div>
@@ -321,10 +321,10 @@
             <div class="relative mb-6">
               <div class="absolute -inset-2 bg-gradient-to-r from-blue-900 to-orange-500 rounded-full blur opacity-20 group-hover:opacity-40 transition duration-500"></div>
               <div class="relative w-48 h-48 md:w-56 md:h-56 overflow-hidden rounded-full border-4 border-white shadow-2xl">
-                <img src="./images/Director2.jpeg" alt="Swati Kumari" class="w-full h-full object-cover object-top hover:scale-110 transition duration-500" />
+                <img src="./images/Director-2.jpeg" alt="Alfiya Parween" class="w-full h-full object-cover object-top hover:scale-110 transition duration-500" />
               </div>
             </div>
-            <h3 class="text-xl font-black text-blue-900 uppercase tracking-tight">Swati Kumari</h3>
+            <h3 class="text-xl font-black text-blue-900 uppercase tracking-tight">Alfiya Parween</h3>
             <p class="text-orange-500 font-extrabold text-xs uppercase tracking-[0.2em] mt-2">Director</p>
           </div>
         </div>
