--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -126,7 +126,7 @@
               <i class="far fa-user mr-2"></i> Login
             </a>
             <a
-              href="admin/site-editor.html"
+              href="admin/admin-login.html"
               class="bg-blue-50 text-blue-900 px-4 py-2 rounded-xl hover:bg-blue-900 hover:text-white transition"
               >Admin Portal</a
             >
@@ -187,17 +187,15 @@
     <div
       class="bg-white border-b overflow-x-auto whitespace-nowrap px-6 py-4 no-scrollbar"
     >
-      <div class="mb-8">
-    <h3 class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-6">Brands</h3>
-    <div class="flex flex-wrap gap-2">
-        <button onclick="filterByBrand('All')" class="filter-chip active px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">All</button>
-        <button onclick="filterByBrand('Siemens')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">Siemens</button>
-        <button onclick="filterByBrand('Anchor')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">Anchor</button>
-        <button onclick="filterByBrand('Havells')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">Havells</button>
-        <button onclick="filterByBrand('Polycab')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">Polycab</button>
-        <button onclick="filterByBrand('L&T')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">L&T</button>
-        <button onclick="filterByBrand('Mishra Atlas')" class="filter-chip px-4 py-2 rounded-full border border-slate-100 text-[10px] font-black uppercase tracking-widest transition-all">Mishra Atlas</button>
-    </div>
+      <div class="bg-white border-b px-6 py-4 overflow-x-auto no-scrollbar">
+  <h3 class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-4">Brands</h3>
+  <div class="flex flex-nowrap gap-2">
+    <button onclick="filterByBrand('All')" class="filter-chip active bg-blue-900 text-white px-5 py-2 rounded-full border border-transparent text-[10px] font-black uppercase tracking-widest transition-all">All</button>
+    <button onclick="filterByBrand('Siemens')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Siemens</button>
+    <button onclick="filterByBrand('Anchor')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Anchor</button>
+    <button onclick="filterByBrand('Havells')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Havells</button>
+    <button onclick="filterByBrand('Polycab')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Polycab</button>
+  </div>
 </div>
 
     <main class="container mx-auto px-6 py-10 flex flex-col lg:flex-row gap-10">
