--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -36,6 +36,26 @@
         background: #1e293b;
         border-radius: 10px;
       }
+      /* Initial Avatar Styling */
+      .user-avatar {
+        width: 40px;
+        height: 40px;
+        background: #1e3a8a;
+        color: white;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 900;
+        font-size: 14px;
+        border: 2px solid #f97316;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+      .user-avatar:hover {
+        transform: scale(1.1);
+        box-shadow: 0 4px 12px rgba(30, 58, 138, 0.2);
+      }
     </style>
   </head>
   <body class="bg-slate-50 font-sans custom-scrollbar">
@@ -69,9 +89,14 @@
         </div>
         <div class="p-6 border-t bg-gray-50">
           <div class="flex justify-between items-center mb-6">
-    <span class="text-[10px] font-black uppercase text-blue-900 tracking-widest">Subtotal</span>
-    <span id="cartTotal" class="text-xl font-black text-blue-900">₹0</span>
-</div>
+            <span
+              class="text-[10px] font-black uppercase text-blue-900 tracking-widest"
+              >Subtotal</span
+            >
+            <span id="cartTotal" class="text-xl font-black text-blue-900"
+              >₹0</span
+            >
+          </div>
           <button
             onclick="location.href = 'cart.html'"
             class="w-full bg-orange-500 text-white py-4 rounded-2xl font-black uppercase tracking-widest hover:bg-blue-900 transition-all shadow-lg active:scale-95"
@@ -119,12 +144,16 @@
               class="hover:text-orange-500 transition"
               >Contact</a
             >
-            <a
-              href="login.html"
-              class="flex items-center hover:text-orange-500 transition"
-            >
-              <i class="far fa-user mr-2"></i> Login
-            </a>
+
+            <div id="authNavWrapper">
+              <a
+                href="login.html"
+                class="flex items-center hover:text-orange-500 transition"
+              >
+                <i class="far fa-user mr-2"></i> Login
+              </a>
+            </div>
+
             <a
               href="admin/admin-login.html"
               class="bg-blue-50 text-blue-900 px-4 py-2 rounded-xl hover:bg-blue-900 hover:text-white transition"
@@ -188,15 +217,45 @@
       class="bg-white border-b overflow-x-auto whitespace-nowrap px-6 py-4 no-scrollbar"
     >
       <div class="bg-white border-b px-6 py-4 overflow-x-auto no-scrollbar">
-  <h3 class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-4">Brands</h3>
-  <div class="flex flex-nowrap gap-2">
-    <button onclick="filterByBrand('All')" class="filter-chip active bg-blue-900 text-white px-5 py-2 rounded-full border border-transparent text-[10px] font-black uppercase tracking-widest transition-all">All</button>
-    <button onclick="filterByBrand('Siemens')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Siemens</button>
-    <button onclick="filterByBrand('Anchor')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Anchor</button>
-    <button onclick="filterByBrand('Havells')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Havells</button>
-    <button onclick="filterByBrand('Polycab')" class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all">Polycab</button>
-  </div>
-</div>
+        <h3
+          class="text-[10px] font-black text-blue-900 uppercase tracking-widest mb-4"
+        >
+          Brands
+        </h3>
+        <div class="flex flex-nowrap gap-2">
+          <button
+            onclick="filterByBrand('All')"
+            class="filter-chip active bg-blue-900 text-white px-5 py-2 rounded-full border border-transparent text-[10px] font-black uppercase tracking-widest transition-all"
+          >
+            All
+          </button>
+          <button
+            onclick="filterByBrand('Siemens')"
+            class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+          >
+            Siemens
+          </button>
+          <button
+            onclick="filterByBrand('Anchor')"
+            class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+          >
+            Anchor
+          </button>
+          <button
+            onclick="filterByBrand('Havells')"
+            class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+          >
+            Havells
+          </button>
+          <button
+            onclick="filterByBrand('Polycab')"
+            class="filter-chip border-slate-100 text-slate-600 px-5 py-2 rounded-full border text-[10px] font-black uppercase tracking-widest transition-all"
+          >
+            Polycab
+          </button>
+        </div>
+      </div>
+    </div>
 
     <main class="container mx-auto px-6 py-10 flex flex-col lg:flex-row gap-10">
       <aside
@@ -298,12 +357,5 @@
 
     <script src="js/cart.js"></script>
     <script src="js/shop.js"></script>
-    <script>
-      function toggleCart() {
-        const drawer = document.getElementById("cartDrawer");
-        drawer.classList.toggle("invisible");
-        drawer.querySelector(".cart-drawer").classList.toggle("open");
-      }
-    </script>
   </body>
 </html>
